modified for cleaner code